@@ -1,3 +1,12 @@
+2006-06-08  James Turner  <james@worldforge.org>
+
+	* Eris/Account.cpp: make Account a to-router for it's own ID; this has not
+	  been necessary up until now, since the response system handles almost all
+	  operations recieved by Account.
+	  
+	* Eris/Account.cpp: correctly return HANDLED for sight(account) updates,
+	  and trigger a character refresh if the characters attribute is modified
+
 2006-06-07  James Turner  <james@worldforge.org>
 
 	* Eris/Account.cpp, Eris/Account.h: update to handle sight(account)
